--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://sysadminexplained.uk/"
+baseURL = "https://sysadminexplained.uk/"
 languageCode = "en-gb"
 title = "Sysadmin Explained"
 theme = "pure"
